# ARKENAR

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  latest.json  package-lock.json  package.json  repomix-output.xml
.github/: SECURITY.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_tests.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/core/: engine.rs  mod.rs  mutator.rs  result_aggregator.rs  state.rs  throttle.rs
core/src/http/: client.rs
core/src/modules/: crawler.rs  mod.rs  nuclei.rs
core/src/notifications/: mod.rs
core/src/utils/: detector.rs  fingerprint.rs  installer.rs  mod.rs  payload_loader.rs
gui/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  update_app.js  update_panel.js  update_sidebar.js  vite.config.ts
gui/public/: vercel.json
gui/src/: App.css  App.tsx  main.tsx  types.ts
gui/src-tauri/: Cargo.toml  arkenar_report.html  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  notifications.rs  reporting.rs  studio.rs
gui/src/components/: CommandPalette.tsx  InfoModal.tsx  SettingsModal.remote.tsx  SettingsModal.tsx  Sidebar.tsx  StudioPanel.tsx  TerminalView.tsx  Toast.tsx  TopStats.tsx  VisualEffects.tsx  primitives.tsx
gui/src/components/studio/: StudioRequest.tsx  StudioResponse.tsx  TrafficDrawer.tsx  useStudio.ts
gui/src/utils/: audio.ts  i18n.ts  releases.ts
src/: main.rs
src/core/: engine.rs  mod.rs  mutator.rs  result_aggregator.rs  target_manager.rs
src/http/: mod.rs
src/utils/: detector.rs  installer.rs  payload_loader.rs
