[package]
name = "arkenar-cli"
version = "1.0.0"
edition = "2021"
description = "CLI frontend for the Arkenar vulnerability scanner."

[[bin]]
name = "arkenar"
path = "src/main.rs"

[dependencies]
arkenar-core = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
