[package]
name = "arkenar-core"
version = "1.0.0"
edition = "2021"
description = "Core library for the Arkenar vulnerability scanner."

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.5"
rand = { version = "0.9.2", features = ["std", "thread_rng"] }
async-trait = "0.1"
futures = "0.3"
url = "2.5"
colored = "2.0"
anyhow = "1.0"
indicatif = "0.17"
which = "8.0.0"
zip = "0.6"
flate2 = "1.1.9"
tar = "0.4.44"
